--- a/app/src/main/res/layout/activity_principal2.xml
+++ b/app/src/main/res/layout/activity_principal2.xml
@@ -27,20 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Abrir camara"
+        android:text="Escanear paciente"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_below="@id/butonCamara"
-        android:layout_marginTop="72dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@+id/butonCamara"
-        tools:layout_editor_absoluteX="105dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
