--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,7 @@
         android:id="@+id/mensaje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_height="28dp"
         android:text=""
-        android:textSize="20sp"
         android:textColor="@android:color/holo_green_light"
         tools:layout_editor_absoluteX="178dp"
         tools:layout_editor_absoluteY="490dp"
@@ -62,3 +60,4 @@
         app:layout_constraintTop_toBottomOf="@+id/boton"
         app:layout_constraintVertical_bias="0.107"
         tools:ignore="MissingConstraints" />
+</androidx.constraintlayout.widget.ConstraintLayout>
