--- a/app/src/main/res/layout/activity_principal2.xml
+++ b/app/src/main/res/layout/activity_principal2.xml
@@ -8,6 +8,17 @@
     android:layout_height="match_parent"
     tools:context=".Principal">
 
+    <Button
+        android:id="@+id/butonCamara2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="Asignar tubo"
+        app:layout_constraintEnd_toEndOf="@+id/butonCamara"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="@+id/butonCamara"
+        app:layout_constraintTop_toBottomOf="@+id/butonCamara" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -29,10 +40,9 @@
         android:layout_marginTop="28dp"
         android:text="Escanear paciente"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintHorizontal_bias="0.522"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
