--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -37,9 +37,12 @@
         android:id="@+id/buttonMedicina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
         android:text="Añadir Medicina"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="312dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonTubo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
